Tạo anotation Validate